ui-preference: Fix tooltip visibility
By using a fixed position, they will be visible anywhere on the page.
Right now they will simply be visible above the information icon.

--- a/src/ui-preferences/styles/info-tooltip.css
+++ b/src/ui-preferences/styles/info-tooltip.css
@@ -36,9 +36,7 @@
     border-radius: 10px;
     opacity: 0;
     transition: 0.6s all;
-    position: absolute;
-    bottom: 20px;
-    left: 10px;
+    position: fixed;
     z-index: 3;
     pointer-events: none;
 }
